--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,38 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
+        <dependency>
+          <groupId>com.boxfuse.cloudwatchlogs</groupId>
+          <artifactId>cloudwatchlogs-java-appender</artifactId>
+          <version>1.0.2.17</version>
+        </dependency>
+        <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-lambda-java-log4j2</artifactId>
+          <version>1.0.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.8.2</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.8.2</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+      <repository>
+        <id>central</id>
+        <url>http://repo1.maven.org/maven2/</url>
+      </repository>
+      <repository>
+        <id>boxfuse-repo</id>
+        <url>https://files.boxfuse.com</url>
+      </repository>
+    </repositories>
 
     <build>
         <plugins>
